--- a/layouts/shortcodes/tagged-posts.html
+++ b/layouts/shortcodes/tagged-posts.html
@@ -1,8 +1,8 @@
-{{ $section := .Get 0 }}
+{{ $tag := .Get 0 }}
 {{ $order := .Get 1 }}
-{{ with site.GetPage $section }}
+{{ with index site.Taxonomies.tags ($tag | urlize) }}
   <ul>
-    {{ $pages := .Pages }}
+    {{ $pages := sort .Pages ".File.ContentBaseName" "asc" }}
     {{ if eq $order "reverse" }}
       {{ $pages = $pages.Reverse }}
     {{ end }}
